--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Trebuchet MS';
-    color: #966FD6;
+    color: #BD6C33;
     background-color: rosybrown;
     margin-left: 75px;
     margin-right: 75px;
