updated department column to one color

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -71,3 +71,7 @@ tbody tr:nth-child(odd) td {
 tbody tr:nth-child(even) td {
     background-color: lawngreen;
 }
+
+#department{
+    background-color: lightgreen;
+}
