--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -109,5 +109,5 @@ button{
     border-color: lightslategray;
     text-align: center;
     border-width: 2.5px;
-    padding: 5px, 2.5px;
+    padding: 5px 2.5px;
 }
