jQuery Slideshow assignment

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -175,3 +175,22 @@ button{
     display: inline-block;
     margin-left: 40px;
 }
+
+/* jQuery Video */
+.alert {
+    color: red;
+}
+
+/* jQuery Slideshow */
+#active {
+    border: 3px darkslateblue;
+    height: 425px;
+    width: 800px;
+    position: relative;
+}
+
+.image {
+    width: 125px;
+    height: 125px;
+    border: 3px darkslateblue;
+}
