Finished Activity 12 / Updated Navigation on all pages

--- a/itis3135/exercises/Taylor-Activity12.css
+++ b/itis3135/exercises/Taylor-Activity12.css
@@ -6,7 +6,7 @@ body {
     border: 3px solid green;
 }
 h1 {
-	background: #dfe3e6 url('images/bullet.gif') no-repeat 7px center;
+	background: #dfe3e6 url('Activity12_images/bullet.gif') no-repeat 7px center;
 	margin: 0;
 	padding: 3px 0 3px 25px;
 	border: solid green 1px;
