--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -84,4 +84,10 @@ input[type=submit]{
 
 span{
     font-weight: bold;
+    font-size: large;
+}
+
+label.error {
+    display: inline;
+    color: red;
 }
