--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -70,7 +70,7 @@ dt{
     font-weight: bolder;
 }
 
-input[type=text], input[type=email], input[placeholder]{
+input[type=text], input[type=email]{
     color: #2E0F15;
     background-color: lavender;
     font-family: 'Helvetica';
@@ -82,12 +82,23 @@ input[type=submit]{
     color: #2E0F15;
 }
 
-span{
+label {
     font-weight: bold;
     font-size: large;
 }
 
-.err{
-    color: #ff0000;
-    margin-left: 5px;
+input {
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: .5em;
+    width: 14em;
+}
+
+#submit {
+    margin-left: 0;
+    width: 10em;
+}
+
+span{
+    color: red;
 }
